<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Petify"
                android:textColor="@color/orange"
                android:textSize="45sp"
                android:fontFamily="@font/montserrat_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivLogoPetify"
                app:layout_constraintEnd_toStartOf="@id/ivCart"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.5"/>

            <ImageView
                android:id="@+id/ivLogoPetify"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="344dp"
                android:src="@drawable/petify_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/ivCart"
                android:layout_width="58dp"
                android:layout_height="45dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="28dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/button_cart"
                android:scaleType="fitCenter"
                android:src="@drawable/shoppingcart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_rounded_search"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:hint="Type to search..."
                android:fontFamily="@font/montserrat_light"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAppName" />

            <TextView
                android:id="@+id/tvPets"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:text="Produk"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/autoCompleteSearch" />

            <HorizontalScrollView
                android:id="@+id/HorizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@id/tvPets"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <FrameLayout
                        android:layout_width="124dp"
                        android:layout_height="144dp"
                        android:layout_marginEnd="16dp">

                        <ImageButton
                            android:id="@+id/imageButtonDog"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/animal_dog"
                            android:scaleType="centerCrop"
                            android:background="@null"
                            android:src="@drawable/dog" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="124dp"
                        android:layout_height="144dp"
                        android:layout_marginEnd="16dp">

                        <ImageButton
                            android:id="@+id/imageButtonCat"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/animal_cat"
                            android:scaleType="centerCrop"
                            android:background="@null"
                            android:src="@drawable/cat" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="124dp"
                        android:layout_height="144dp"
                        android:layout_marginEnd="16dp">

                        <ImageButton
                            android:id="@+id/imageButtonBird"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/animal_bird"
                            android:scaleType="centerCrop"
                            android:background="@null"
                            android:src="@drawable/bird" />

                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="124dp"
                        android:layout_height="144dp"
                        android:layout_marginEnd="16dp">

                        <ImageButton
                            android:id="@+id/imageButtonHamster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/animal_hamster"
                            android:scaleType="centerCrop"
                            android:background="@null"
                            android:src="@drawable/hamster" />

                    </FrameLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/tvLayanan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="Layanan"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/HorizontalScrollView" />

            <!-- Basic Grooming -->
            <ImageButton
                android:id="@+id/imageBasicGrooming"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Basic Grooming"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/basic_grooming"
                app:layout_constraintTop_toBottomOf="@id/tvLayanan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Full Grooming -->
            <ImageButton
                android:id="@+id/imageFullGrooming"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Full Grooming"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/full_grooming"
                app:layout_constraintTop_toBottomOf="@id/imageBasicGrooming"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- Spa dan Relaksasi -->
            <ImageButton
                android:id="@+id/imageSpaRelaksasi"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Spa dan Relaksasi"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/spa_relaksasi"
                app:layout_constraintTop_toBottomOf="@id/imageFullGrooming"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- Pet Hotel Day -->
            <ImageButton
                android:id="@+id/imagePetDay"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Pet Hotel Day"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/pethotel_day"
                app:layout_constraintTop_toBottomOf="@id/imageSpaRelaksasi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <!-- Pet Hotel Night -->
            <ImageButton
                android:id="@+id/imagePethNight"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Pet Hotel Night"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/pethotel_night"
                app:layout_constraintTop_toBottomOf="@id/imagePetDay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Pet Hotel FullDay -->
            <ImageButton
                android:id="@+id/imagePethFull"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:contentDescription="Pet Hotel Full Day"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/pethotel_fullday"
                app:layout_constraintTop_toBottomOf="@id/imagePethNight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>